--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Welcome!</h1>
+<h1>WELCOME</h1>
 <p>Website is currently under construction. Check back later!</p>
 </body>
 </html>
