--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Davis Wertheimer</title>
 <body>
 <h1>WELCOME</h1>
 <p>Website is currently under construction. Check back later!</p>
