Initial style upload, with image and contact

--- a/index.html
+++ b/index.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
 <html>
-<title>Davis Wertheimer</title>
-<body>
-<h1>WELCOME</h1>
-<p>Website is currently under construction. Check back later!</p>
-</body>
+  <title>Davis Wertheimer</title>
+  <head>
+    <script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js" charset="UTF-8"></script><style>
+            #main{
+                font-family:Helvetica;
+                line-height:32px;
+                padding:10px;
+                margin:0px;
+                border:0px;
+                border-collapse:collapse
+            }
+            #list{
+                font-family:Helvetica;
+                font-size: 85%;
+                line-height:25px;
+                padding:10px;
+                margin:0px;
+                border:0px;
+                border-collapse:collapse
+            }
+            h1
+            {
+                align:"center";
+                font-family: Helvetica;
+            }
+            #contact
+            {
+                text-align:center;
+                font-family:Helvetica;
+                line-height:32px;
+                padding:10px;
+                margin:0px;
+                border:0px;
+                border-collapse:collapse;
+            }
+        </style>
+  </head>
+  
+  <body>
+    <h1>DAVIS WERTHEIMER</h1>
+    <img src="files/squarephoto.png" height=200></img>
+    <div id="contact">
+      Ph.D. Student<br>
+      Gates Hall 345<br>
+      Cornell University<br>
+      dww78-at-cornell-dot-edu
+    </div>
+      
+    <p>Website is currently under construction. Check back later!</p>
+  </body>
 </html>
