--- a/index.html
+++ b/index.html
@@ -39,15 +39,24 @@
   </head>
   
   <body>
-    <h1>DAVIS WERTHEIMER</h1>
-    <img src="files/squarephoto.png" height=200></img>
-    <div id="contact">
-      Ph.D. Student<br>
-      Gates Hall 345<br>
-      Cornell University<br>
-      dww78-at-cornell-dot-edu
-    </div>
-      
-    <p>Website is currently under construction. Check back later!</p>
+    <table>
+      <tr>
+        <td>
+          <h1>DAVIS WERTHEIMER</h1>
+          <img src="files/squarephoto.png" height=200></img>
+          <div id="contact">
+            Ph.D. Student<br>
+            Gates Hall 345<br>
+            Cornell University<br>
+            dww78-at-cornell-dot-edu
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>Website is currently under construction. Check back later!</p>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
