--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   <body>
     <table>
       <tr>
+        <td id="main">
+          <p>Website is currently under construction. Check back later!</p>
+        </td>
         <td>
           <h1>DAVIS WERTHEIMER</h1>
           <img src="files/squarephoto.png" height=200></img>
@@ -50,11 +53,6 @@
             Cornell University<br>
             dww78-at-cornell-dot-edu
           </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Website is currently under construction. Check back later!</p>
         </td>
       </tr>
     </table>
