upload from local version, switched edu and pub

--- a/index.html
+++ b/index.html
@@ -1,8 +1,116 @@
 <!DOCTYPE html>
 <html>
-<title>Davis Wertheimer</title>
-<body>
-<h1>WELCOME</h1>
-<p>Website is currently under construction. Check back later!</p>
-</body>
+  <title>Davis Wertheimer</title>
+  <head>
+    <script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js" charset="UTF-8"></script><style>
+            #main{
+                font-family:Helvetica;
+                line-height:28px;
+                padding:8px;
+                margin:0px;
+                border:0px;
+                border-collapse:collapse
+            }
+            #list{
+                font-family:Helvetica;
+                font-size: 85%;
+                line-height:25px;
+                padding:10px;
+                margin:0px;
+                border:0px;
+                border-collapse:collapse
+            }
+            h1
+            {
+                align:"center";
+                font-family: Helvetica;
+            }
+		        h2
+            {
+                font-family: Helvetica;
+            }
+            a
+            {
+                color:rgb(50,100,200);
+                text-decoration:none;
+            }
+            #contact
+            {
+                text-align:center;
+                font-family:Helvetica;
+                line-height:28px;
+                padding:8px;
+                margin:0px;
+                border:0px;
+                border-collapse:collapse;
+            }
+        </style>
+  </head>
+  
+  <body>
+    <table style="max-width:700px" align="center" cellpadding="8">
+      <tr>
+        <td colspan="2">
+          <h1>DAVIS WERTHEIMER</h1>
+        </td>
+      </tr>
+      
+	 <tr>
+        <td>
+          <img src="files/squarephoto.png" height=200></img>
+          <div id="contact">
+            Gates Hall 345<br>
+            Cornell University<br>
+            dww78-at cornell-dot edu
+          </div>
+        </td>
+        <td id="main">
+          <p>I am a Ph.D. student at Cornell University, Ithaca campus. My research is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. Since high-quality training data for a given task may not always be readily available in the wild, I believe it is important to understand how neural models generalize and adapt to new domains from partially relevant data or indirect supervision.</p>
+
+<p><a href="http://home.bharathh.info/">Bharath Hariharan</a> is my advisor.</p>
+        </td>
+      </tr>
+
+      <tr>
+        <td colspan="2">
+          <h2>Publications</h2>
+          <ul id="main">
+          <li><b>Few-Shot Learning with Localization in Realistic Settings</b><br>
+          Davis Wertheimer and Bharath Hariharan<br>
+          <i>CVPR</i> 2019, <b>oral</b><br>
+          <a href="https://arxiv.org/abs/1904.08502">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="files/cvpr2019paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="files/cvpr2019supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://github.com/daviswer/fewshotlocal">code</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        </td>
+      </tr>
+
+     <tr>
+       <td colspan="2">
+         <h2>Education</h2>
+         <ul id="main">
+         <li>Ph.D: Cornell University, Computer Science (current)</li>
+         <li>Undergrad: Stanford University, Symbolic Systems</li>
+         </ul>
+       </td>
+     </tr>
+
+      <tr>
+        <td colspan="2">
+          <h2>Misc</h2>
+          <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, and producing original varieties of home-made bread and ice cream.</p>
+
+          <div style="position:absolute; right:0px; z-index:-1;"><img src="files/bottomcorner.jpg" height=400></img></div>
+
+        </td>
+      </tr>
+
+      <tr><td>&nbsp;</td></tr>
+      <tr>
+        <td colspan="1"><p id="main"><i>"Begin at the beginning, and go on till you come to the end: then stop."</i></br>-Lewis Carroll</p></td>
+      </tr>
+    </table>
+
+  </body>
+
 </html>
