--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <h2>Misc</h2>
           <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, and producing original varieties of home-made bread and ice cream.</p>
 
-          <div style="position:absolute; right:0px; z-index:-1;"><img src="files/bottomcorner.jpg" height=400></img></div>
+          <div style="position:absolute; right:0px; z-index:-1;"><img src="files/bottomcorner2.jpg" height=400></img></div>
 
         </td>
       </tr>
