Final spacing fixes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </style>
   </head>
   
-  <body>
+  <body style="margin-bottom:0px;">
     <table style="max-width:700px" align="center" cellpadding="8">
       <tr>
         <td colspan="2">
@@ -100,14 +100,14 @@
           <h2>Misc</h2>
           <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, and producing original varieties of home-made bread and ice cream.</p>
 
-          <div style="position:absolute; right:0px; z-index:-1;"><img src="files/bottomcornerwider.jpg" height=400></img></div>
+          <div style="position:absolute; right:0px; z-index:-1;"><img src="files/bottomcornerwider.jpg" height=380></img></div>
 
         </td>
       </tr>
 
       <tr><td>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br></td></tr>
       <tr>
-        <td colspan="1"><p id="main"><i>"Begin at the beginning, and go on till you come to the end: then stop."</i></br>-Lewis Carroll</p></td>
+        <td colspan="2"><p id="main"><i>"Begin at the beginning, and go on till you<br>come to the end: then stop."</i></br>-Lewis Carroll</p></td>
       </tr>
     </table>
 
