--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 align:"center";
                 font-family: Helvetica;
             }
-		        h2
+            h2
             {
                 font-family: Helvetica;
             }
@@ -65,7 +65,7 @@
           </div>
         </td>
         <td id="main">
-          <p>I am a Ph.D. student at Cornell University, Ithaca campus. My research is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. Since high-quality training data for a given task may not always be readily available in the wild, I believe it is important to understand how neural models generalize and adapt to new domains from partially relevant data or indirect supervision.</p>
+          <p>Currently a Ph.D. student at Cornell University (Ithaca campus). My research is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. Since high-quality training data for a given task may not always be readily available in the wild, I believe it is important to understand how neural models generalize and adapt to new domains from partially relevant data or indirect supervision.</p>
 
 <p><a href="http://home.bharathh.info/">Bharath Hariharan</a> is my advisor.</p>
         </td>
@@ -98,7 +98,7 @@
       <tr>
         <td colspan="2">
           <h2>Misc</h2>
-          <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, and producing original varieties of home-made bread and ice cream.</p>
+          <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, and creating and making original ice cream and bread recipes. I also enjoy live art and music.</p>
 
           <div style="position:absolute; right:0px; z-index:-1;"><img src="files/bottomcornerwider.jpg" height=380></img></div>
 
