--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             h2
             {
                 font-family: Helvetica;
+		margin-block-end: .2em;
+		margin-block-start: .6em;
             }
             a
             {
