browser compatible spacing

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             h2
             {
                 font-family: Helvetica;
-		margin-block-end: .2em;
-		margin-block-start: .6em;
+		margin-bottom: .2em;
+		margin-top: .6em;
             }
             a
             {
