--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
           </div>
         </td>
         <td id="main">
-          <p>Currently a Ph.D. student at Cornell University (Ithaca campus). My research is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. Since high-quality training data for a given task may not always be readily available in the wild, I believe it is important to understand how neural models generalize and adapt to new domains from partially relevant data or indirect supervision.</p>
+          <p>Ph.D. student in the Cornell University Computer Science department (Ithaca campus). 
+		  My research is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. 
+		  Since high-quality training data for a given task may not always be readily available in the wild, 
+		  I believe it is important to understand how neural models generalize and adapt to new domains from 
+		  partially relevant data or indirect supervision.</p>
 
 <p><a href="http://home.bharathh.info/">Bharath Hariharan</a> is my advisor.</p>
         </td>
@@ -92,7 +96,7 @@
          <h2>Education</h2>
          <ul id="main">
          <li>Ph.D: Cornell University, Computer Science (current)</li>
-         <li>Undergrad: Stanford University, Symbolic Systems</li>
+         <li>Undergrad: Stanford University, major in Symbolic Systems / minor in Mathematics</li>
          </ul>
        </td>
      </tr>
@@ -100,16 +104,19 @@
       <tr>
         <td colspan="2">
           <h2>Misc</h2>
-          <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, and creating and making original ice cream and bread recipes. I also enjoy live art and music.</p>
+          <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, 
+		  and creating and making original ice cream and bread recipes. I also enjoy live art and music.</p>
 
           <div style="position:absolute; right:0px; z-index:-1;"><img src="files/bottomcornerwider.jpg" height=380></img></div>
 
         </td>
       </tr>
 
-      <tr><td>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br></td></tr>
+      <tr><td>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;
+	      <br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br></td></tr>
       <tr>
-        <td colspan="2"><p id="main"><i>"Begin at the beginning, and go on till you<br>come to the end: then stop."</i></br>-Lewis Carroll</p></td>
+        <td colspan="2"><p id="main"><i>"Begin at the beginning, and go on till you<br>
+		come to the end: then stop."</i></br>-Lewis Carroll</p></td>
       </tr>
     </table>
 
