--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </td>
         <td id="main">
-          <p>Ph.D. student in the Cornell University Computer Science department (Ithaca campus). 
+          <p>Ph.D. student in the Cornell University Computer Science Department (Ithaca campus). 
 		  My research is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. 
 		  Since high-quality training data for a given task may not always be readily available in the wild, 
 		  I believe it is important to understand how neural models generalize and adapt to new domains from 
