Language updates, plus honors

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
        <td colspan="2">
          <h2>Education</h2>
          <ul id="main">
-         <li>Ph.D: Cornell University, Computer Science (current)</li>
+         <li>Ph.D. candidate: Cornell University, Computer Science (current)</li>
          <li>Undergrad: Stanford University, major in Symbolic Systems / minor in Mathematics</li>
          </ul>
        </td>
@@ -104,6 +104,14 @@
       <tr>
         <td colspan="2">
           <h2>Misc</h2>
+		<ul id="main">
+		<li>TA for CS4780: Machine Learning for Intelligent Systems (2017)</li>
+		<li>TA for CS4786: Machine Learning for Data Scientists (2016)</li>
+		<li>Graduation with distinction (3.9 GPA) from Stanford (2016)</li>
+		<li>Member, Phi Beta Kappa (2016)</li>
+		<li>Intel Science Talent Search national semifinalist (2012)</li> 
+		<li>Scholastic Art and Writing national gold key (2011)</li>
+		</ul>
           <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, 
 		  and creating and making original ice cream and bread recipes. I also enjoy live art and music.</p>
 
