--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </td>
         <td id="main">
           <p>Ph.D. student in the Cornell University Computer Science Department (Ithaca campus). 
-		  My research is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. 
+		  My research interest is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. 
 		  Since high-quality training data for a given task may not always be readily available in the wild, 
 		  I believe it is important to understand how neural models generalize and adapt to new domains from 
 		  partially relevant data or indirect supervision.</p>
@@ -107,7 +107,7 @@
 		<ul id="main">
 		<li>TA for CS4780: Machine Learning for Intelligent Systems (2017)</li>
 		<li>TA for CS4786: Machine Learning for Data Scientists (2016)</li>
-		<li>Graduation with distinction (3.9 GPA) from Stanford (2016)</li>
+		<li>Stanford graduate with distinction (3.9 GPA) (2016)</li>
 		<li>Member, Phi Beta Kappa (2016)</li>
 		<li>Intel Science Talent Search national semifinalist (2012)</li> 
 		<li>Scholastic Art and Writing national gold key (2011)</li>
