better pgraph, better image

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <td id="main">
           <p>Ph.D. student in the Cornell University Computer Science Department (Ithaca campus). 
 		  My research interest is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. 
-		  Since high-quality training data for a given task may not always be readily available in the wild, 
+		  Since high-quality training data for a given task may not always be readily available, 
 		  I believe it is important to understand how neural models generalize and adapt to new domains from 
 		  partially relevant data or indirect supervision.</p>
 
@@ -115,7 +115,7 @@
           <p id="main">Non-academic interests include fractal art, 3d printing jewelry, cooking, origami, 
 		  and creating and making original ice cream and bread recipes. I also enjoy live art and music.</p>
 
-          <div style="position:absolute; right:0px; z-index:-1;"><img src="files/bottomcornerwider.jpg" height=380></img></div>
+          <div style="position:absolute; right:0px; z-index:-1;"><img src="files/cornerbeta.jpg" height=380></img></div>
 
         </td>
       </tr>
