--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       
 	 <tr>
         <td>
-          <img src="files/newphoto.jpg" height=200></img>
+          <img src="files/newestphoto.jpg" height=250></img>
           <div id="contact">
             Gates Hall 345<br>
             Cornell University<br>
