Added video link for cvpr19

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
           <a href="files/cvpr2019paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2019supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://github.com/daviswer/fewshotlocal">code</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://www.youtube.com/watch?v=8qkrPSjONhA&t=5565s">video</a>&nbsp;&nbsp;&nbsp;&nbsp;
         </td>
       </tr>
 
