Added cvpr20 paper and review stuff

--- a/index.html
+++ b/index.html
@@ -81,7 +81,17 @@
         <td colspan="2">
           <h2>Publications</h2>
           <ul id="main">
-          <li><b>Few-Shot Learning with Localization in Realistic Settings</b><br>
+		  
+	  <li><b>Revisiting Pose-Normalization for Fine-Grained Few-Shot Recognition</b><br>
+          Luming Tang, Davis Wertheimer and Bharath Hariharan<br>
+          <i>CVPR</i> 2020<br>
+          <a href="https://arxiv.org/abs/2004.00705">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="files/cvpr2020paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="files/cvpr2020supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://github.com/Tsingularity/PoseNorm_Fewshot">code</a>&nbsp;&nbsp;&nbsp;&nbsp;
+<!--           <a href="https://www.youtube.com/watch?v=8qkrPSjONhA&t=5565s">video</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+
+	  <li><b>Few-Shot Learning with Localization in Realistic Settings</b><br>
           Davis Wertheimer and Bharath Hariharan<br>
           <i>CVPR</i> 2019, <b>oral</b><br>
           <a href="https://arxiv.org/abs/1904.08502">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -89,6 +99,7 @@
           <a href="files/cvpr2019supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://github.com/daviswer/fewshotlocal">code</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://www.youtube.com/watch?v=8qkrPSjONhA&t=5565s">video</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	
         </td>
       </tr>
 
@@ -106,6 +117,7 @@
         <td colspan="2">
           <h2>Misc</h2>
 		<ul id="main">
+		<li>Anonymous peer reviewer for IJCV and TPAMI, 2020</li>
 		<li>TA for CS4780: Machine Learning for Intelligent Systems (2017)</li>
 		<li>TA for CS4786: Machine Learning for Data Scientists (2016)</li>
 		<li>Stanford graduate with distinction (3.9 GPA) (2016)</li>
