Formatting, trying out paperlist

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
                 border:0px;
                 border-collapse:collapse
             }
-            #list{
+            #papers{
                 font-family:Helvetica;
-                font-size: 85%;
-                line-height:25px;
-                padding:10px;
-                margin:0px;
+                line-height:28px;
+                padding:8px;
+                margin:10px;
                 border:0px;
                 border-collapse:collapse
             }
@@ -80,7 +79,7 @@
       <tr>
         <td colspan="2">
           <h2>Publications</h2>
-          <ul id="main">
+          <ul id="papers">
 		  
 	  <li><b>Revisiting Pose-Normalization for Fine-Grained Few-Shot Recognition</b><br>
           Luming Tang, Davis Wertheimer and Bharath Hariharan<br>
@@ -117,7 +116,7 @@
         <td colspan="2">
           <h2>Misc</h2>
 		<ul id="main">
-		<li>Anonymous peer reviewer for IJCV and TPAMI, 2020</li>
+		<li>Anonymous peer reviewer for IJCV and TPAMI (2020)</li>
 		<li>TA for CS4780: Machine Learning for Intelligent Systems (2017)</li>
 		<li>TA for CS4786: Machine Learning for Data Scientists (2016)</li>
 		<li>Stanford graduate with distinction (3.9 GPA) (2016)</li>
