--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
                 border:0px;
                 border-collapse:collapse
             }
-            #papers{
-                font-family:Helvetica;
-                line-height:28px;
-                padding:8px;
-                margin:10px;
-                border:0px;
-                border-collapse:collapse
+            li{
+                margin:2px;
             }
             h1
             {
@@ -79,7 +74,7 @@
       <tr>
         <td colspan="2">
           <h2>Publications</h2>
-          <ul id="papers">
+          <ul id="main">
 		  
 	  <li><b>Revisiting Pose-Normalization for Fine-Grained Few-Shot Recognition</b><br>
           Luming Tang, Davis Wertheimer and Bharath Hariharan<br>
