Further spacing difficulties

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 border:0px;
                 border-collapse:collapse
             }
-            li{
-                margin:2px;
+            #paper{
+                margin:4px 0;
             }
             h1
             {
@@ -76,7 +76,7 @@
           <h2>Publications</h2>
           <ul id="main">
 		  
-	  <li><b>Revisiting Pose-Normalization for Fine-Grained Few-Shot Recognition</b><br>
+	  <li id="paper"><b>Revisiting Pose-Normalization for Fine-Grained Few-Shot Recognition</b><br>
           Luming Tang, Davis Wertheimer and Bharath Hariharan<br>
           <i>CVPR</i> 2020<br>
           <a href="https://arxiv.org/abs/2004.00705">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -85,7 +85,7 @@
           <a href="https://github.com/Tsingularity/PoseNorm_Fewshot">code</a>&nbsp;&nbsp;&nbsp;&nbsp;
 <!--           <a href="https://www.youtube.com/watch?v=8qkrPSjONhA&t=5565s">video</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 
-	  <li><b>Few-Shot Learning with Localization in Realistic Settings</b><br>
+	  <li id="paper"><b>Few-Shot Learning with Localization in Realistic Settings</b><br>
           Davis Wertheimer and Bharath Hariharan<br>
           <i>CVPR</i> 2019, <b>oral</b><br>
           <a href="https://arxiv.org/abs/1904.08502">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
