Added video link for PN

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <a href="files/cvpr2020paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2020supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://github.com/Tsingularity/PoseNorm_Fewshot">code</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<!--           <a href="https://www.youtube.com/watch?v=8qkrPSjONhA&t=5565s">video</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+          <a href="https://www.youtube.com/watch?v=T9cc4DJJuXo">video</a>&nbsp;&nbsp;&nbsp;&nbsp;
 
 	  <li id="paper"><b>Few-Shot Learning with Localization in Realistic Settings</b><br>
           Davis Wertheimer and Bharath Hariharan<br>
