--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	  <li id="paper"><b>[Title witheld for double-blind peer review]</b><br>
           Davis Wertheimer*, Luming Tang* and Bharath Hariharan (* equal contribution)<br>
           <i>CVPR</i> 2021 (in submission)<br>
-<!--           <a href="https://arxiv.org/abs/2004.00705">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+          <a href="https://arxiv.org/abs/2012.01506">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2021paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2021supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
 <!--           <a href="https://github.com/Tsingularity/PoseNorm_Fewshot">code</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
