de/re-anonymizing review paper

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
           <h2>Publications</h2>
           <ul id="main">
 		  
-	  <li id="paper"><b>[Title witheld for double-blind peer review]</b><br>
+	  <li id="paper"><b>Fine-Grained Few-Shot Classification with Feature Map Reconstruction Networks</b><br>
           Davis Wertheimer*, Luming Tang* and Bharath Hariharan (* equal contribution)<br>
-          <i>CVPR</i> 2021 (in submission)<br>
+	  <i>preprint</i>
           <a href="https://arxiv.org/abs/2012.01506">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2021paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2021supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
