Updated frn to cvpr accept

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		  
 	  <li id="paper"><b>Fine-Grained Few-Shot Classification with Feature Map Reconstruction Networks</b><br>
           Davis Wertheimer*, Luming Tang* and Bharath Hariharan (* equal contribution)<br>
-	  <i>preprint</i><br>
+	  <i>CVPR</i> 2021<br>
           <a href="https://arxiv.org/abs/2012.01506">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2021paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2021supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
