Add FRN code/video

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
           <a href="https://arxiv.org/abs/2012.01506">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2021paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="files/cvpr2021supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<!--           <a href="https://github.com/Tsingularity/PoseNorm_Fewshot">code</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-<!--           <a href="https://www.youtube.com/watch?v=8qkrPSjONhA&t=5565s">video</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+          <a href="https://github.com/Tsingularity/FRN">code</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://youtu.be/kbsRsbQKTRc">video</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		  
 	  <li id="paper"><b>Augmentation-Interpolative AutoEncoders for Unsupervised Few-Shot Image Generation</b><br>
           Davis Wertheimer, Omid Poursaeed and Bharath Hariharan<br>
