--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <h2>Publications</h2>
           <ul id="main">
 		  
-	  <li id="paper"><b>Fine-Grained Few-Shot Classification with Feature Map Reconstruction Networks</b><br>
+	  <li id="paper"><b>Few-Shot Classification with Feature Map Reconstruction Networks</b><br>
           Davis Wertheimer*, Luming Tang* and Bharath Hariharan (* equal contribution)<br>
 	  <i>CVPR</i> 2021<br>
           <a href="https://arxiv.org/abs/2012.01506">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -129,6 +129,7 @@
         <td colspan="2">
           <h2>Misc</h2>
 		<ul id="main">
+		<li>CVPR Outstanding Reviewer (2021)</li>
 		<li>Anonymous peer reviewer for CVPR, ICML, ICCV and TPAMI (2021)</li>
 		<li>Anonymous peer reviewer for IJCV and TPAMI (2020)</li>
 		<li>TA for CS4780: Machine Learning for Intelligent Systems (2017)</li>
