Add tpami submission

--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
           <h2>Publications</h2>
           <ul id="main">
 		  
+	  <li id="paper"><b>Few-Shot Learning in Long-Tailed Settings</b><br>
+          Davis Wertheimer, Luming Tang, Dhruv Baijal*, Pranjal Mittal*, Anika Talwar*, and Bharath Hariharan (* equal contribution)<br>
+	  <i>An updated journal version of my CVPR'19 paper, currently under review</i><br>
+<!--           <a href="https://arxiv.org/abs/2012.01506">arxiv</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+          <a href="files/tpami2021paper.pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
+<!--           <a href="files/cvpr2021supp.pdf">supp</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+          <a href="https://github.com/daviswer/fewshotlocal">code</a>&nbsp;&nbsp;&nbsp;&nbsp;
+<!--           <a href="https://youtu.be/kbsRsbQKTRc">video</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+		  
 	  <li id="paper"><b>Few-Shot Classification with Feature Map Reconstruction Networks</b><br>
           Davis Wertheimer*, Luming Tang* and Bharath Hariharan (* equal contribution)<br>
 	  <i>CVPR</i> 2021<br>
