Add resume link

--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
           </div>
         </td>
         <td id="main">
-          <p>I'm a Ph.D. student in the Cornell University Computer Science Department (Ithaca campus). 
+          <p>I'm a Ph.D. Candidate in the Cornell University Computer Science Department (Ithaca campus). 
 		  My research interest is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. 
 		  Since high-quality training data for a given task may not always be readily available, 
 		  I believe it is important to understand how neural models generalize and adapt to new domains from 
 		  partially relevant data or indirect supervision.</p>
 
-<p><a href="http://home.bharathh.info/">Bharath Hariharan</a> is my advisor.</p>
+		<p><a href="http://home.bharathh.info/">Bharath Hariharan</a> is my advisor.</p>
+		
+		<p>My resume can be found <a href="files/Resume shortform.pdf">here</a>.</p>
         </td>
       </tr>
 
