--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <td colspan="2">
           <h2>Misc</h2>
 		<ul id="main">
-		<li>ICCV Top Reviewer (2021)</li>
+		<li>ICCV Outstanding Reviewer (2021)</li>
 		<li>ICML Best Reviewer (2021)</li>
 		<li>CVPR Outstanding Reviewer (2021)</li>
 		<li>Anonymous peer reviewer for CVPR, ICML, ICCV and TPAMI (2021)</li>
