--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
         <td colspan="2">
           <h2>Misc</h2>
 		<ul id="main">
+		<li>NeurIPS Outstanding Reviewer (2021)</li>
 		<li>ICCV Outstanding Reviewer (2021)</li>
 		<li>ICML Best Reviewer (2021)</li>
 		<li>CVPR Outstanding Reviewer (2021)</li>
-		<li>Anonymous peer reviewer for CVPR, ICML, ICCV and TPAMI (2021)</li>
+		<li>Anonymous peer reviewer for TPAMI (2021)</li>
 		<li>Anonymous peer reviewer for IJCV and TPAMI (2020)</li>
 		<li>TA for CS4780: Machine Learning for Intelligent Systems (2017)</li>
 		<li>TA for CS4786: Machine Learning for Data Scientists (2016)</li>
