Update bio and staleness msg

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Updating - check back later!</title>
+  <title>Davis Wertheimer</title>
   <head>
     <script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js" charset="UTF-8"></script><style>
             #main{
@@ -55,21 +55,23 @@
         <td>
           <img src="files/newestphoto.jpg" height=250></img>
           <div id="contact">
-            Gates Hall 345<br>
-            Cornell University<br>
+            Watson Research Center<br>
+            36-115<br>
+	    davis-dot wertheimer-at ibm-dot com<br>
             dww78-at cornell-dot edu
           </div>
         </td>
         <td id="main">
-          <p>I'm a Ph.D. Candidate in the Cornell University Computer Science Department (Ithaca campus). 
-		  My research interest is in Machine Learning and Computer Vision, with a focus on few-shot visual understanding. 
-		  Since high-quality training data for a given task may not always be readily available, 
-		  I believe it is important to understand how neural models generalize and adapt to new domains from 
-		  partially relevant data or indirect supervision.</p>
+          	<p>I'm a research scientist at IBM working on efficient Large Language Model training, deployment, and architecture design. 
+		  Running LLMs at scale involves complex interconnected components and constraints.
+		  To build and deploy LLMs efficiently, we must understand these constraints and how models engage with them.</p>
+		  
+	  	<p>I earned my Ph.D. in Computer Science from Cornell University in 2022 under <a href="http://home.bharathh.info/">Bharath Hariharan</a>, 
+		  researching Machine Learning and Computer Vision, with a focus on few-shot visual understanding. 
+		  I studied how neural models generalize and adapt to new domains from partially relevant data, limited data, and indirect supervision
+		  (machine learning under very different constraints!).</p>
 
-		<p><a href="http://home.bharathh.info/">Bharath Hariharan</a> is my advisor.</p>
-		
-		<p>My resume can be found <a href="files/Resume shortform.pdf">here</a>.</p>
+<!-- 		<p>My resume can be found <a href="files/Resume shortform.pdf">here</a>.</p> -->
         </td>
       </tr>
 
@@ -77,6 +79,7 @@
         <td colspan="2">
           <h2>Publications</h2>
           <ul id="main">
+	  <li id="paper"><b>Currently updating - check back soon!</b><br> 
 		  
 	  <li id="paper"><b>Few-Shot Learning in Long-Tailed Settings</b><br>
           Davis Wertheimer, Luming Tang, Dhruv Baijal*, Pranjal Mittal*, Anika Talwar*, and Bharath Hariharan (* equal contribution)<br>
