--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <div id="contact">
             Watson Research Center<br>
             36-115<br>
-	    davis-dot wertheimer-at ibm-dot com<br>
-            dww78-at cornell-dot edu
+	    davis.wertheimer at ibm com<br>
+            dww78 at cornell edu
           </div>
         </td>
         <td id="main">
