Manual break emails

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
         <td>
           <img src="files/newestphoto.jpg" height=250></img>
           <div id="contact">
-            Watson Research Center<br>
-            36-115<br>
-	    davis.wertheimer at ibm com<br>
-            dww78 at cornell edu
+            Watson Research<br>
+            Center 36-115<br>
+	    davis dot wertheimer<br>
+		at ibm dot com<br>
+            dww78 at cornell dot edu
           </div>
         </td>
         <td id="main">
